--- a/may_blog/templates/home.html
+++ b/may_blog/templates/home.html
@@ -5,16 +5,21 @@
 <header class="banner">
     <h1 class="header-text">This is a blog during a pandemic situation...</h1>
 </header>
+<h2>Hello there {{current_user.username}}</h2>
+{%if current_user.is_authenticated%}
 
-<h3>{{ customer_name }} </h3>
-<p>{{ order_number }}</p>
-
-{% for key,item in item_dict.items() %}
-    <ul>
-        {% if item == 'Bread' %}
-        <li>{{ key }} {{ item }}</li>
-        {% endif %}
-    </ul>
+{% for post in posts %}
+<div class="container">
+    <h3>
+        <a href="{{url_for('post_detail',post_id=post.id)}}">{{post.title}}</a>
+    </h3>
+    <p>{{post.content}}</p>
+</div>
 {% endfor %}
+{%else%}
+<h2>Nothing to show here...</h2>
+
+{%endif%}
+
 
 {% endblock content %}
