--- a/may_blog/templates/posts.html
+++ b/may_blog/templates/posts.html
@@ -13,7 +13,7 @@
             {{post.content.label}}
             {{post.content(class="form-control", placeholder ="Enter Content")}}
         </fieldset>
-        {{post.submit(class = "btn btn-success",)}}
+        {{post.submit(class = "btn btn-success")}}
     </div>
 </form>
 {%endblock content%}
